kubernetes/apps/ai-system/kagent/app/httproute.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app kagent
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: AI
    gethomepage.dev/name: *app
    # gethomepage.dev/icon: https://raw.githubusercontent.com/homarr-labs/dashboard-icons/f222c55843b888a82e9f2fe2697365841cbe6025/svg/coder.svg
    gethomepage.dev/description: "Kubermatic Agent Platform"
    gethomepage.dev/pod-selector: app.kubernetes.io/name=kagent-ui
    external-dns.alpha.kubernetes.io/target: "internal.${SECRET_DOMAIN}"
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 200"]
spec:
  hostnames:
    - "kagent.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: kagent-ui
          namespace: ai-system
          port: 8080
